changed: fix front page section4 pc and sp

--- a/src/assets/scss/pages/_top-page.scss
+++ b/src/assets/scss/pages/_top-page.scss
@@ -999,15 +999,16 @@
 
 					.col--box {
 						width: 100%;
-						height: 345px;
+						height: auto;
 						position: relative;
 
 						img {
-							object-fit: cover;
-							position: absolute;
-							inset: 0;
-							height: 100%;
+							// object-fit: cover;
+							// position: absolute;
+							// inset: 0;
+							// height: 100%;
 							width: 100%;
+							
 						}
 
 						.top-text01 {
@@ -1040,71 +1041,92 @@
 							}
 						}
 
-						.num {
-							@include font-line(108);
-							font-family: BebasNeue;
-							color: #e3474d;
-							position: absolute;
-							top: 98px;
-							z-index: 1;
-							left: 20px;
-						}
+						// .num {
+						// 	@include font-line(108);
+						// 	font-family: "Bebas Neue", cursive;
+						// 	color: #e3474d;
+						// 	position: absolute;
+						// 	top: 104px;
+						// 	z-index: 1;
+						// 	left: 20px;
 
-						.info {
-							position: absolute;
-							bottom: 32px;
-							left: 0;
-							width: 87%;
-							background: linear-gradient(
-								100deg,
-								rgba(168, 88, 61, 0.7234244039412641) 29%,
-								rgba(165, 47, 55, 0.6253851882549895) 55%
-							);
+						// 	@include is-max(815px) {
+						// 		top: 87px;
+						// 		font-weight: 400;
+						// 	}
 
-							padding: 20px 0;
-							text-align: left;
-							padding-left: 25px;
+						// 	@include is-sp {
+						// 		top: 135px;
+						// 		@include font-line(87);
+						// 		left: 7px;
+						// 	}
+						// }
 
-							@include is-max(960px) {
-								padding-left: 20px;
-							}
+						// .badge {
+						// 	color: #fff;
+						// 	position: absolute;
+						// 	font-size: 11px;
+						// 	top: 50%;
+						// 	right: 20%;
+						// 	transform: translate(-50%, -50%);
+						// }
 
-							@include is-max(930px) {
-								padding-left: 10px;
-							}
+						// .info {
+						// 	position: absolute;
+						// 	bottom: 32px;
+						// 	left: 0;
+						// 	width: 87%;
+						// 	background: linear-gradient(
+						// 		100deg,
+						// 		rgba(168, 88, 61, 0.7234244039412641) 29%,
+						// 		rgba(165, 47, 55, 0.6253851882549895) 55%
+						// 	);
 
-							@include is-max(840px) {
-								width: 90%;
-							}
+						// 	padding: 20px 0;
+						// 	text-align: left;
+						// 	padding-left: 25px;
 
-							&-ttl {
-								@include font-line(26);
-								color: $color-text03;
-								font-family: yu-mincho-pr6n, sans-serif;
-								letter-spacing: 0.03em;
-								line-height: 1;
-								padding-bottom: 7px;
+						// 	@include is-max(960px) {
+						// 		padding-left: 20px;
+						// 	}
 
-								@include is-max(900px) {
-									@include font-line(22);
-								}
+						// 	@include is-max(930px) {
+						// 		padding-left: 10px;
+						// 	}
 
-								@include is-max(500px) {
-									font-size: 6vw;
-								}
-							}
+						// 	@include is-max(840px) {
+						// 		width: 90%;
+						// 	}
 
-							&-sub {
-								@include font-line(12);
-								color: $color-text03;
-								font-family: cross-platform-yu-gothic;
-								letter-spacing: 0.3em;
+						// 	&-ttl {
+						// 		@include font-line(26);
+						// 		color: $color-text03;
+						// 		font-family: yu-mincho-pr6n, sans-serif;
+						// 		letter-spacing: 0.03em;
+						// 		line-height: 1;
+						// 		padding-bottom: 7px;
 
-								@include is-max(500px) {
-									font-size: 3vw;
-								}
-							}
-						}
+						// 		@include is-max(900px) {
+						// 			@include font-line(22);
+						// 		}
+
+						// 		@include is-max(500px) {
+						// 			font-size: 6vw;
+						// 		}
+						// 	}
+
+						// 	&-sub {
+						// 		@include font-line(12);
+						// 		color: $color-text03;
+						// 		font-family: cross-platform-yu-gothic;
+						// 		letter-spacing: 0.3em;
+
+						// 		@include is-max(500px) {
+						// 			font-size: 3vw;
+						// 			letter-spacing: 0.15em;
+						// 		}
+						// 	}
+						// }
 					}
 
 					@include is-sp {
