--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -238,7 +238,8 @@
 			width: 33.33%;
 			align-items: center;
 			padding-left: 50px;
-			padding-top: 15px;
+			padding-top: 30px;
+			padding-bottom: 30px;
 
 			@include is-max(980px) {
 				padding-left: 20px;
@@ -329,9 +330,10 @@
 							padding: 25px 28px;
 						}
 
-						&:nth-child(1) , &:nth-child(2) {
+						&:nth-child(1),
+						&:nth-child(2) {
 							img {
-								display:none;
+								display: none;
 
 								@include is-sp {
 									display: block;
@@ -368,7 +370,6 @@
 							}
 						}
 					}
-					
 				}
 				&-02 {
 					width: 100%;
@@ -442,7 +443,7 @@
 							bottom: -65px;
 							left: 50%;
 							transform: translate(-50%, 0);
-							
+
 							@include is-sp {
 								position: relative;
 								bottom: unset;
@@ -556,7 +557,7 @@
 		height: 660px;
 		width: 1100px;
 		position: relative;
-		background: linear-gradient(90deg, #81b3d4, #4d95d1);
+		background: linear-gradient(to right, #4A93D1, #81B3D4);
 		margin: 0 auto;
 		display: flex;
 		align-items: center;
@@ -571,25 +572,29 @@
 			margin: 0;
 			width: 95%;
 			height: 100%;
-			padding-left: 47px;
-			padding: 91.5px 0 100px 0;
+			padding: 84.5px 0 100px 0;
+			margin-top: 21.5px;
 		}
 
 		.brnd-logo-sp {
 			display: none;
-			width: 261px;
+			width: 301px;
 			align-items: center;
 			position: absolute;
 			top: 3%;
-			left: 9%;
+			left: 90px;
 
 			@include is-sp {
 				display: block;
+				width: 278px;
+			}
+
+			@include is-max(375px) {
+				left: 26px;
 			}
 
 			&-link {
 				display: flex;
-				justify-content: space-between;
 				width: 100%;
 				@include font-line(14.5, 19);
 				font-weight: 700;
@@ -605,6 +610,10 @@
 
 				@include is-sp {
 					display: flex;
+				}
+
+				p {
+					margin-left: 25px;
 				}
 			}
 		}
@@ -631,10 +640,10 @@
 			height: 674px;
 			width: 585px;
 			background: url(../../release/image/header/img-banner1.png);
-			z-index: 3;
+			z-index: -1;
 
 			@include is-sp {
-				right: -6%;
+				right: -5%;
 				width: 471.5px;
 				z-index: -4;
 			}
@@ -841,6 +850,8 @@
 			width: 100%;
 			height: 100%;
 			background-image: url(../../release/image/header/circ-bnnr.png);
+			z-index: -1;
+			
 
 			@include is-sp {
 				display: none;
@@ -862,6 +873,7 @@
 
 				@include is-sp {
 					@include font-line(23.3, 64);
+					opacity: 0.5;
 				}
 			}
 		}
@@ -869,11 +881,10 @@
 		&-txt02 {
 			position: absolute;
 			top: 84px;
-			left: 1047px;
-			z-index: 555;
+			right: 9px;
 
-			@include is-max(1110px) {
-				left: 95%;
+			@include is-sp {
+				right: -4px;
 			}
 
 			&-ver {
@@ -886,27 +897,8 @@
 
 				@include is-sp {
 					@include font-line(23.3, 64);
+					opacity: 0.5;
 				}
-			}
-
-			@include is-sp {
-				position: absolute;
-				top: 84px;
-				right: -5px;
-				z-index: 555;
-				left: 91%;
-			}
-
-			@include is-max(500px) {
-				left: 87%;
-			}
-
-			@include is-max(430px) {
-				left: 85%;
-			}
-
-			@include is-max(375px) {
-				left: 83%;
 			}
 		}
 	}
