--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -490,6 +490,7 @@
         text-align: center;
         background-color: #fff;
         padding:20px 10px 18px;
+		border:2px solid #f1f1f1;
         
 
       &-ttl {
